--- a/DataAugmentation.ipynb
+++ b/DataAugmentation.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10000, 32, 32, 3)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'ImageDataGenerator' object has no attribute 'shape'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7008/1567466089.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[0mdatagen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mflow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdatagen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'ImageDataGenerator' object has no attribute 'shape'"
+      "{'featurewise_center': True, 'samplewise_center': False, 'featurewise_std_normalization': True, 'samplewise_std_normalization': False, 'zca_whitening': False, 'zca_epsilon': 1e-06, 'rotation_range': 20, 'width_shift_range': 0.2, 'height_shift_range': 0.2, 'shear_range': 0.0, 'zoom_range': [1.0, 1.0], 'channel_shift_range': 0.0, 'fill_mode': 'nearest', 'cval': 0.0, 'horizontal_flip': True, 'vertical_flip': False, 'rescale': None, 'preprocessing_function': None, 'dtype': 'float32', 'interpolation_order': 1, 'data_format': 'channels_last', 'channel_axis': 3, 'row_axis': 1, 'col_axis': 2, '_validation_split': 0.2, 'mean': None, 'std': None, 'principal_components': None, 'brightness_range': None}\n"
      ]
     }
    ],
@@ -36,7 +25,7 @@
     "\n",
     "num_classes = 10\n",
     "(x_train, y_train), (x_test, y_test) = datasets.cifar10.load_data()\n",
-    "print (x_test.shape)\n",
+    "#print (x_test.shape)\n",
     "y_train = keras.utils.to_categorical(y_train, num_classes)\n",
     "y_test = keras.utils.to_categorical(y_test, num_classes)\n",
     "datagen = ImageDataGenerator(\n",
@@ -49,7 +38,7 @@
     "    validation_split=0.2)\n",
     "\n",
     "datagen.flow(x_test, y_test)\n",
-    "print (datagen.shape)"
+    "print (type(datagen))"
    ]
   }
  ],
@@ -72,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
