--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -70,7 +70,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no stored variable or alias X\n"
+     ]
+    }
+   ],
    "source": [
     "%store -r scoring X X_train X_val CV t t_val f n "
    ]
@@ -79,31 +87,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Validación cruzada con Random Forest"
+    "#### Validación cruzada con Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media del KNN :  0.9696296296296296\n"
+      "Media del LR accuracy :  0.9624074074074074\n"
      ]
     }
    ],
    "source": [
-    "modelRF = RandomForestClassifier(n_estimators=20, criterion='gini')\n",
-    "scoresRF = cross_validate(modelRF, X, t, cv=CV, scoring=scoring)\n",
-    "print('Media del KNN : ', np.mean(scoresRF['test_accuracy']))"
+    "modelLR = LogisticRegression(penalty='none', solver = 'lbfgs', max_iter=10000, multi_class='multinomial')\n",
+    "\n",
+    "scoresLR = cross_validate(modelLR, X, t, cv=CV, scoring=scoring,n_jobs=-1,error_score='raise')\n",
+    "\n",
+    "print('Media del LR accuracy : ', np.mean(scoresLR['test_accuracy']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -111,64 +121,60 @@
      "output_type": "stream",
      "text": [
       "         test_recall_macro  test_precision_macro  test_f1_macro  \\\n",
-      "CV 1              0.973148              0.973153       0.973145   \n",
-      "CV 2              0.963889              0.963844       0.963843   \n",
-      "CV 3              0.958333              0.958269       0.958285   \n",
-      "CV 4              0.975000              0.975103       0.974960   \n",
-      "CV 5              0.977778              0.977817       0.977759   \n",
-      "Average           0.969630              0.969637       0.969599   \n",
+      "CV 1              0.955556              0.956299       0.955669   \n",
+      "CV 2              0.971296              0.971279       0.971257   \n",
+      "CV 3              0.962037              0.961981       0.961998   \n",
+      "CV 4              0.966667              0.966924       0.966639   \n",
+      "CV 5              0.956481              0.956644       0.956537   \n",
+      "Average           0.962407              0.962626       0.962420   \n",
       "\n",
       "         test_accuracy  test_roc_auc_ovo  \n",
-      "CV 1          0.973148          0.998202  \n",
-      "CV 2          0.963889          0.997272  \n",
-      "CV 3          0.958333          0.995579  \n",
-      "CV 4          0.975000          0.998304  \n",
-      "CV 5          0.977778          0.998546  \n",
-      "Average       0.969630          0.997580  \n"
+      "CV 1          0.955556          0.987233  \n",
+      "CV 2          0.971296          0.987653  \n",
+      "CV 3          0.962037          0.984311  \n",
+      "CV 4          0.966667          0.993832  \n",
+      "CV 5          0.956481          0.986417  \n",
+      "Average       0.962407          0.987889  \n"
      ]
     }
    ],
    "source": [
-    "df = pd.DataFrame.from_dict(scoresRF)\n",
+    "df = pd.DataFrame.from_dict(scoresLR)\n",
     "df.drop(df.iloc[:, 0:2], inplace = True, axis = 1)\n",
-    "df.loc[5]=[np.mean(scoresRF['test_recall_macro']),np.mean(scoresRF['test_precision_macro']),np.mean(scoresRF['test_f1_macro']),np.mean(scoresRF['test_accuracy']),np.mean(scoresRF['test_roc_auc_ovo'])]\n",
+    "df.loc[5]=[np.mean(scoresLR['test_recall_macro']),np.mean(scoresLR['test_precision_macro']),np.mean(scoresLR['test_f1_macro']),np.mean(scoresLR['test_accuracy']),np.mean(scoresLR['test_roc_auc_ovo'])]\n",
     "df.index = [\"CV 1\",\"CV 2\",\"CV 3\",\"CV 4\",\"CV 5\",\"Average\"]\n",
-    "df.to_excel(\"./informe/tables/RF.xlsx\") \n",
-    "print(df)"
+    "df.to_excel(\"./informe/tables/LR.xlsx\") \n",
+    "print(df)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analisis hiper-parametros Random Forest"
+    "### Analisis hiper-parametros Logistic regression  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 36 candidates, totalling 180 fits\n"
+      "Fitting 2 folds for each of 2 candidates, totalling 4 fits\n"
      ]
     }
    ],
    "source": [
-    "max_depth = [int(x) for x in np.linspace(10, 110, num = 11)]\n",
-    "max_depth.append(None)\n",
-    "param_grid = {#'n_estimators': [int(x) for x in np.linspace(start = 200, stop = 2000, num = 10)],\n",
-    "               'max_features': ['auto', 'sqrt'],\n",
-    "               #'max_depth': max_depth,\n",
-    "               'min_samples_split': [2, 5, 10],\n",
-    "               'min_samples_leaf': [1, 2, 4],\n",
-    "               'bootstrap': [True, False]}\n",
+    "param_grid = {\n",
+    "    \"solvers\": ['newton-cg', 'lbfgs'], \n",
+    "    \"logistic__C\": np.logspace(-4, 4, 4),\n",
+    "}\n",
+    "search = GridSearchCV(estimator = modelLR, param_grid =param_grid, n_jobs=-1,cv=2,scoring=scoring,verbose=5,return_train_score=False)\n",
     "\n",
-    "search = GridSearchCV(estimator = modelRF, param_grid =param_grid, n_jobs=-1,cv=CV,scoring=scoring,verbose=1,refit=False)\n",
-    "search_results = search.fit(X,t)"
+    "search_results = search.fit(X,t)\n"
    ]
   }
  ],
