--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -86,7 +86,15 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Media del LDA accuracy :  0.9403703703703703\n"
+     ]
+    }
+   ],
    "source": [
     "modelLDA = LinearDiscriminantAnalysis()\n",
     "\n",
@@ -140,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 2 folds for each of 3 candidates, totalling 6 fits\n"
+      "Fitting 2 folds for each of 2 candidates, totalling 4 fits\n"
      ]
     }
    ],
