--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -64,7 +64,8 @@
     "from keras import layers, models, utils, datasets\n",
     "from keras import utils\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from sklearn.model_selection import KFold, GridSearchCV"
+    "from sklearn.model_selection import KFold, GridSearchCV\n",
+    "import json"
    ]
   },
   {
@@ -153,7 +154,7 @@
     "df = pd.DataFrame.from_dict(search_results.cv_results_)\n",
     "df.to_excel(\"./informe/tables/parameters_lda.xlsx\") \n",
     "labels = df['params']\n",
-    "\n",
+    "time_all_cores = df[\"mean_fit_time\"]\n",
     "data_recall =[]\n",
     "data_precision = []\n",
     "data_f1 =[]\n",
@@ -311,7 +312,7 @@
     "disp.figure_.suptitle(\"Matriz de confusión LDA\");                                                          # Añade un título a la figura de la matriz de confusión\n",
     "disp.figure_.set_dpi(100)                                                                                  # Establece el tamaño de la figura\n",
     "plt.xlabel(\"Clase predicha\")\n",
-    "plt.ylabel(\"Clase real\")"
+    "plt.ylabel(\"Clase real\")\n"
    ]
   },
   {
@@ -365,6 +366,25 @@
    "source": [
     "scoresLDA = cross_validate(modeLDA, x_train, t_train, cv=CV, scoring=scoring)\n",
     "%store scoresLDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analisis tiempo ejecución"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = GridSearchCV(estimator = modeLDA, param_grid =param_grid, n_jobs=-1,cv=CV,scoring=scoring,verbose=5,refit=False)\n",
+    "\n",
+    "search_results = search.fit(x_train,t_train)\n",
+    "time_one_core = df[\"mean_fit_time\"]"
    ]
   }
  ],
