--- a/spectral_clustering.ipynb
+++ b/spectral_clustering.ipynb
@@ -177,7 +177,8 @@
     "clustering = SpectralClustering(n_clusters=3,eigen_solver=\"arpack\",affinity=\"nearest_neighbors\")\n",
     "param_grid = {\n",
     "   \"eigen_solver\":[\"arpack\", \"lobpcg\", \"amg\"],\n",
-    "   \"assign_labels\":[\"kmeans\",\"discretize\"]      \n",
+    "   \"assign_labels\":[\"kmeans\",\"discretize\"], \n",
+    "   \"n_clusters\":[3]     \n",
     "}\n",
     "search = GridSearchCV(estimator = clustering, param_grid =param_grid, n_jobs=-1,cv=CV,scoring=scoring,refit=False)\n",
     "results = search.fit(X_train)\n",
